Small spell check on the game. Ignore vscode files

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Darron's Cystral Collector</title>
+    <title>Darron's Crystal Collector</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -20,7 +20,7 @@
                     <hr class="my-2">
                     <p>You will be given a random number at the beginning of the game.</p>
                     <p>There are 4 crystals below, each with a random score associated. By clicking on one of the crystals it will be added to your score.</p>
-                    <p>The objective of this game is to rech the target score without going over.</p>
+                    <p>The objective of this game is to reach the target score without going over.</p>
                     <p>If you go over the target score, you will accrue a loss.</p>
                     <br>
                     <p class="lead">
